--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html>
   <head>
     <title>BusMall Market Research</title>
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="chart.js"></script>
   </head>
   <body>
-    <header>
+    <header id="header1">
       <h1>Which item are you most likely to buy?</h1>
     </header>
-    <div class="containerBox">
+    <div class="containerBox" id="mainArea">
       <img class="possibleChoiceBox imageLeft">
       <img class="possibleChoiceBox imageCenter">
       <img class="possibleChoiceBox imageRight">
     </div>
+    <canvas id="myChart" width="400" height="400"></canvas>
+
     <script src="app.js"></script>
   </body>
 </html>
