--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header id="header1">
-      <h1 id="myH1">Which item are you most likely to buy?</h1>
+      <h1 id="myH1">Welcome to <strong>BusMall!</strong> Which are you most likely to buy?</h1>
     </header>
     <div class="containerBox" id="mainArea">
       <img class="possibleChoiceBox imageLeft">
